--- a/app/src/main/res/drawable/shape.xml
+++ b/app/src/main/res/drawable/shape.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android" >
-    <stroke android:width="2dp"
-        android:color="#ffffff"/>
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
+    <stroke
+        android:width="2dp"
+        android:color="#ffffff" />
     <gradient
         android:angle="225"
-        android:startColor="#fd02"
-        android:endColor="#dd1e50f0"/>
-
-
+        android:endColor="#ff18"
+        android:startColor="#dd1e50dd"
+        />
 
 
     <corners
