--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -2,7 +2,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#ff292829"
     android:orientation="vertical"
     tools:context=".MainActivity">
 
@@ -10,11 +9,11 @@
         android:id="@+id/tv_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="25dp"
+        android:layout_marginLeft="17dp"
         android:layout_marginTop="25dp"
         android:text="@string/name"
         android:textAllCaps="true"
-        android:textColor="@color/white"
+        android:textColor="@color/darkGrey"
         android:textSize="20sp"
         android:textStyle="bold" />
 
@@ -22,62 +21,57 @@
         android:id="@+id/tv_family"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="25dp"
+        android:layout_marginLeft="17dp"
         android:layout_marginTop="35dp"
         android:text="@string/family"
         android:textAllCaps="true"
-        android:textColor="@color/white"
+        android:textColor="@color/darkGrey"
         android:textSize="20sp"
-        android:textStyle="bold"
-
-        />
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/tv_age"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="25dp"
+        android:layout_marginLeft="17dp"
         android:layout_marginTop="25dp"
         android:text="@string/age"
         android:textAllCaps="true"
-        android:textColor="@color/white"
+        android:textColor="@color/darkGrey"
         android:textSize="20sp"
-        android:textStyle="bold"
-
-        />
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/tv_email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="25dp"
+        android:layout_marginLeft="17dp"
         android:layout_marginTop="25dp"
         android:text="@string/email"
         android:textAllCaps="true"
-        android:textColor="@color/white"
+        android:textColor="@color/darkGrey"
         android:textSize="20sp"
-        android:textStyle="bold"
-
-        />
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/tv_PhoneNumber"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="25dp"
+        android:layout_marginLeft="17dp"
         android:layout_marginTop="25dp"
         android:text="@string/phonenumber"
-        android:textColor="@color/white"
+        android:textColor="@color/darkGrey"
         android:textSize="20sp"
         android:textStyle="bold" />
-
 
     <Button
         android:id="@+id/btn_no"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:layout_marginLeft="10dp"
         android:layout_marginTop="65dp"
+        android:layout_marginRight="10dp"
         android:background="@drawable/shape2"
         android:text="@string/no"
         android:textSize="20sp"
@@ -88,12 +82,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"
+        android:layout_marginRight="10dp"
         android:background="@drawable/shape2"
         android:text="@string/yes"
         android:textSize="20sp"
         android:textStyle="bold" />
-
 
 </LinearLayout>
 
