--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#ff292829</color>
+    <color name="colorPrimary">#00574b</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
-    <color name="white">#F0FFFF</color>
+    <color name="white">#DCDCDC</color>
+    <color name="darkGrey">#ff292829</color>
 </resources>
