--- a/app/src/main/res/layout/activity_test_drawer.xml
+++ b/app/src/main/res/layout/activity_test_drawer.xml
@@ -8,14 +8,6 @@
 
 
     <LinearLayout
-
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-    </LinearLayout>
-
-
-    <LinearLayout
         android:layout_width="280dp"
         android:layout_height="match_parent"
         android:layout_gravity="left"
@@ -24,26 +16,47 @@
 
 
         <Button
+            android:layout_marginTop="15dp"
             android:id="@+id/btn_Save-Data"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/shape3"
+            android:gravity="center"
             android:text="@string/save_data" />
 
 
-        <Button
-            android:id="@+id/btn_listview"
+        <TextView
+            android:id="@+id/txt_listview"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="45dp"
             android:background="@drawable/shape3"
-            android:text="@string/list_view" />
-
+            android:gravity="center"
+            android:text="@string/list_view"
+            android:textColor="@color/black" />
 
         <TextView
+            android:layout_marginTop="35dp"
+            android:textColor="@color/darkGrey"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/Namayesh_Oghat_sharei" />
 
+        <TextView
+            android:layout_marginTop="10dp"
+            android:gravity="center"
+            android:id="@+id/txt_Oghat"
+            android:layout_width="match_parent"
+            android:layout_height="45dp"
+            android:layout_gravity="center"
+            android:background="@drawable/shape3"
+            android:text="@string/oghatsharei"
+            android:textColor="@color/black" />
+
+        <TextView
             android:id="@+id/txt_instagram"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="400dp"
             android:gravity="center"
             android:text="Instagram"
             android:textColor="@color/darkGrey" />
