--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#D81B60</color>
     <color name="white">#DCDCDC</color>
     <color name="darkGrey">#ff292829</color>
+    <color name="black">#000000</color>
 </resources>
